[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ulroy"
version = "0.1.0"
description = "Python client library for Ulroy API with both sync and async support"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Dipankar Sarkar", email = "me@dipankar.name" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/ulroy-ai/ulroy-python"
Documentation = "https://ulroy-client.readthedocs.io"
Repository = "https://github.com/ulroy-ai/ulroy-python.git"

[project.dependencies]
httpx = "^0.26.0"
pydantic = "^2.6.1"

[tool.hatch.build.targets.wheel]
packages = ["ulroy_client"] 